main updated to index

--- a/index.html
+++ b/index.html
@@ -1894,7 +1894,7 @@
                   alt="Phone"
                   class="contact-icon"
                 />
-                <span>(+233)</span>
+                <span>(+233) 55 328 1389</span>
               </div>
               <div class="contact-item">
                 <img
@@ -1903,8 +1903,7 @@
                   class="contact-icon"
                 />
                 <div>
-                  <div>XXXXXXXXXXXX</div>
-                  <div>XXXXXX XXX</div>
+                  <div>Passion Hills, East Legon</div>
                 </div>
               </div>
             </div>
