--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         box-sizing: border-box;
       }
 
+      html {
+        scroll-behavior: smooth;
+      }
+
       body {
         font-family: Inter, -apple-system, BlinkMacSystemFont, sans-serif;
         line-height: 1.6;
@@ -79,7 +83,10 @@
         border-radius: 24px;
         padding: 14px 0;
         margin: 12px 6px 0 6px;
-        position: relative;
+        position: sticky;
+        top: 4px;
+        z-index: 1000;
+        transition: all 0.3s ease;
       }
 
       .header-content {
@@ -87,6 +94,15 @@
         justify-content: space-between;
         align-items: center;
         padding: 0 56px;
+      }
+
+      /* Scrolled state with glassmorphism */
+      .header.scrolled {
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(12px);
+        -webkit-backdrop-filter: blur(12px);
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
       }
 
       .logo-container {
@@ -183,14 +199,14 @@
         left: 0;
         right: 0;
         background-color: #fbfcfc;
-        border-radius: 0 0 24px 24px;
+        border-radius: 24px 24px 24px 24px;
         box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
         z-index: 1000;
         overflow: hidden;
         transform: translateY(-100%);
         opacity: 0;
         transition: all 0.3s ease;
-        margin-top: 0;
+        margin-top: 5px;
       }
 
       .mobile-menu.active {
@@ -417,7 +433,7 @@
       .opportunity-title {
         font-size: 48px;
         font-family: Figtree, sans-serif;
-        font-weight: 700;
+        font-weight: 600;
         line-height: 1.1;
         color: #ffffff;
         flex: 0 0 45%;
@@ -1098,6 +1114,7 @@
 
       /* Interactive states */
       .artisan-card:hover {
+        border: 2px solid transparent;
         transform: translateY(-4px);
         box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
         transition: all 0.3s ease;
@@ -1258,10 +1275,11 @@
         }
 
         .hero-image {
+          margin-top: 5px;
           order: 2;
           width: 100%;
-          height: 400px;
-          object-fit: contain;
+          height: 100%;
+          object-fit: cover;
           border-radius: 24px;
         }
 
@@ -1435,7 +1453,7 @@
       </header>
 
       <!-- Hero Section -->
-      <section class="hero-section section">
+      <section id="home" class="hero-section section">
         <div class="hero-content">
           <div class="hero-stats">
             <div class="avatars" aria-label="Verified artisans">
@@ -1501,7 +1519,7 @@
       </section>
 
       <!-- Opportunity Section -->
-      <section class="opportunity-section section">
+      <section id="about" class="opportunity-section section">
         <div class="opportunity-content">
           <div class="opportunity-header">
             <h2 class="opportunity-title">Turning talent into opportunity</h2>
@@ -1609,7 +1627,7 @@
       </section>
 
       <!-- How it Works Section -->
-      <section class="how-it-works section">
+      <section id="how-it-works" class="how-it-works section">
         <h2 class="how-it-works-title">How JumaLink Works</h2>
         <p class="how-it-works-description">
           JumaLink makes it easy for anyone to find reliable help and for
@@ -1623,11 +1641,7 @@
             <div class="step-header">
               <h3 class="step-title">Step 1: Sign Up</h3>
               <div class="step-icon">
-                <img
-                  src="../assets/images/img_background.svg"
-                  alt="Sign up icon"
-                  style="width: 32px; height: 30px"
-                />
+
               </div>
             </div>
             <p class="step-description">
@@ -1640,14 +1654,6 @@
           <div class="step-card">
             <div class="step-header">
               <h3 class="step-title">Step 2: Get Matched</h3>
-              <div class="step-icon">
-                <dotlottie-wc
-                  src="https://lottie.host/f2de0bef-3881-4858-b2df-58ae3349cc78/Qi9XX4Xbby.lottie"
-                  style="width: 48px; height: 48px"
-                  autoplay
-                  loop
-                ></dotlottie-wc>
-              </div>
             </div>
             <p class="step-description">
               Artisans get notified about available jobs that match their
@@ -1660,13 +1666,6 @@
           <div class="step-card">
             <div class="step-header">
               <h3 class="step-title">Step 3: Connect & Work</h3>
-              <div class="step-icon">
-                <img
-                  src="../assets/images/img_component_2_blue_gray_900_02_48x48.svg"
-                  alt="Connect icon"
-                  style="width: 32px; height: 30px"
-                />
-              </div>
             </div>
             <p class="step-description">
               Clients connect directly with artisans to discuss details and get
@@ -1819,7 +1818,7 @@
       </section>
 
       <!-- CTA Section -->
-      <section class="cta-section section">
+      <section id="contact" class="cta-section section">
         <div class="cta-content">
           <div class="cta-text">
             <h2 class="cta-title">
@@ -1920,7 +1919,7 @@
 
           <div class="footer-column">
             <h4 class="footer-column-title">Hire A Worker</h4>
-            <a href="#channel" class="footer-link">Join the channel</a>
+            <a href="https://whatsapp.com/channel/0029VbB0rpO6hENq4I8uyO3w" class="footer-link">Join the channel</a>
             <a href="#call" class="footer-link">Book A Call</a>
           </div>
         </div>
@@ -1951,6 +1950,18 @@
             hamburger.classList.remove("active");
             mobileMenu.classList.remove("active");
           });
+        });
+
+        // Add scroll event listener
+        window.addEventListener("scroll", function () {
+          const header = document.querySelector(".header");
+
+          // Add 'scrolled' class when user scrolls down more than 50px
+          if (window.scrollY > 50) {
+            header.classList.add("scrolled");
+          } else {
+            header.classList.remove("scrolled");
+          }
         });
 
         // Close menu when clicking outside
