fix: change image

--- a/index.html
+++ b/index.html
@@ -2381,7 +2381,7 @@
                   </p>
                 </div>
                 <img
-                  src="./assets/medium-shot-smiley-man-posing-with-helmet.jpg"
+                  src="./assets/6831e06497d52eda554cc13d_ChatGPT_20Image_20May_2024_202025_20Modern_20Home_20Descriptions.avif(1).png"
                   alt="Placeholder image"
                   class="card-image"
                   style="margin-bottom: 16px"
