--- a/privacy/index.html
+++ b/privacy/index.html
@@ -19,16 +19,14 @@
       gtag('config', 'G-94PH46K68C');
     </script>
     
-    <!-- Microsoft Clarity - Add your tracking code here -->
-    <!-- Uncomment and replace XXXXXXXXX with your Project ID
+    <!-- Microsoft Clarity -->
     <script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "XXXXXXXXX");
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "tosvjz9v3f");
     </script>
-    -->
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/Group 12.png" />
