update: we don't share data. we do take non PII info.

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -461,17 +461,13 @@
           </p>
 
           <h3 class="subsection-title">With Service Providers</h3>
-          <p class="content-text">
-            We may share limited data with trusted third parties who help us operate, maintain, and
-            improve Jumalink (e.g., payment processors, analytics providers, and cloud storage
-            services). All service providers are required to protect your data and use it only for
-            authorized purposes.
-          </p>
-
           <h3 class="subsection-title">With Your Consent</h3>
           <p class="content-text">
             We only share your personal data for additional purposes (like promotions or
             partnerships) when you give explicit consent.
+          </p>
+<p class="content-text">
+            Non-identifiable information is collected about your device in relation to dimensions, the device model, and os version among others to help with app optimization and bug fixes.
           </p>
 
           <h3 class="subsection-title">For Legal and Security Reasons</h3>
@@ -532,7 +528,7 @@
           </p>
 
           <div class="contact-box">
-            <p><strong>Jumalink Technologies</strong></p>
+            <p><strong>Jumalink</strong></p>
             <p>Address: Passion Hills, East Legon, Accra, Ghana</p>
             <p>Email: support@jumalink.com</p>
             <p>Phone: (+233) 55 328 1389</p>
