update: support & privacy links

--- a/index.html
+++ b/index.html
@@ -2472,7 +2472,9 @@
       <div style="text-align: center; color: white;">
         <h1 style="font-size: 48px; margin-bottom: 20px;">Site Under Maintenance</h1>
         <p style="font-size: 18px; margin-bottom: 30px;">We're currently working on improvements. Please check back soon!</p>
-        <p style="font-size: 14px; color: rgba(255,255,255,0.8);">For urgent inquiries, contact us at support@jumalink.com</p>
+        <p style="font-size: 14px; color: rgba(255,255,255,0.8);">For urgent inquiries, contact us at <a href="mailto:support@jumalink.com" style="color: #84b975;">support@jumalink.com</a></p>
+        <!-- Refer to the privacy policy at https://jumalink.com/privacy -->
+        <p style="font-size: 14px; color: rgba(255,255,255,0.6);">Find our privacy policy <a href="https://jumalink.com/privacy" style="color: #84b975;">here</a>.</p>
       </div>
     </div>
   </body>
